2008-07-26  Jason Xia  <jasonxh@gmail.com>

	* configure.ac: Fix a compatibility bug introduced in r418 with
	xulrunner older than 1.9. (mozilla plugin)

2008-07-25  Jason Xia  <jasonxh@gmail.com>

	* configure.ac, plugin/src/nsScriptablePeer.h: Add support for
	xulrunner 1.9. (mozilla plugin)

2008-06-28  Jason Xia  <jasonxh@gmail.com>

	* src/appconfig.cpp (CAppConfig::DoDataExchange): Fix the bug of
	nonpersistent "DetectDBChar" preference.

2008-06-19  Jason Xia  <jasonxh@gmail.com>

	* README: Add more detailed information for the configure option
	--enable-iplookup.

2008-06-04  Jim Huang  <jserv.tw@gmail.com>

	* src/core/fileutil.c (copyfile): Assign file mode argument passed to
	open(2).
	Added GPL license claim.

2008-04-18  Shih-Yuan Lee (FourDollars)  <fourdollars@gmail.com>

	* configure.ac: Make configure.ac simpler and clear.

2008-04-11  Shih-Yuan Lee (FourDollars)  <fourdollars@gmail.com>

	* src/mainframe.cpp,
	src/mainframe.h: Polish the switch between normal/fullscreen/simple
	mode.

2008-04-06  Jim Huang  <jserv.tw@gmail.com>

	* src/mainframe.cpp (ui_info):
	Added fullscreen switch in popup window.
	Inspired by the idea of DreamerC <dreamerwolf.tw@gmail.com>.

2008-04-05  Jason Xia  <jasonxh@gmail.com>

	* src/core/termdata.cpp (read_line): Fix the bug of missing the last
	character of each line when copying multi-line contents.

2008-03-30  Jim Huang  <jserv.tw@gmail.com>

	* configure.ac: Applied linker optimizations: prevent gaps between
	symbols due to alignment constraints, presumably increasing
	efficiency layout.

2008-03-28  Jim Huang  <jserv.tw@gmail.com>

	* configure.ac: Reduce relocations in the libraries through extra
	linker optimizations.  This needs GNU ld >= 2.18 .

2008-03-23  Jim Huang  <jserv.tw@gmail.com>

	* src/appconfig.h,
	src/generalprefpage.h,
	src/appconfig.cpp (CAppConfig::DoDataExchange)
	(CAppConfig::SetToDefault),
	src/generalprefpage.cpp (CGeneralPrefPage::CGeneralPrefPage): Properly